automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -25,11 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.55"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    ".5*(4/10+7/10)"
    ]
   },
   {
@@ -63,16 +75,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
+       "        {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
+       "       dtype=object), 'probs': array([0.5, 0.5])}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "bag1 = None\n",
-    "bag2 = None\n",
-    "box  = None\n",
+    "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.4, 0.6])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}\n",
+    "box  = {'bags': np.array([{'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.4, 0.6])},{'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}],dtype=object), 'probs': np.array([0.5, 0.5])}\n",
     "\n",
-    "bag1, bag2, box\n",
+    "# bag1, bag2, \n",
+    "box \n",
     "\n",
     "# ({'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "#   'probs': array([0.4, 0.6])},\n",
@@ -80,8 +106,10 @@
     "#  {'marbles': array(['black', 'white'], dtype='<U5'),\n",
     "#   'probs': array([0.7, 0.3])},\n",
     "\n",
-    "#  {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.4, 0.6])},\n",
-    "#          {'marbles': array(['black', 'white'], dtype='<U5'), 'probs': array([0.7, 0.3])}],\n",
+    "#  {'bags': array([{'marbles': array(['black', 'white'], dtype='<U5'), \n",
+    "#             'probs': array([0.4, 0.6])},\n",
+    "#          {'marbles': array(['black', 'white'], dtype='<U5'), \n",
+    "#             'probs': array([0.7, 0.3])}],\n",
     "#         dtype=object), 'probs': array([0.5, 0.5])})"
    ]
   },
@@ -94,17 +122,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'white'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_marble(box):\n",
-    "    # randomly choose a bag \n",
-    "   \n",
+    "    # randomly choose a bag\n",
+    "    bag = np.random.choice(box['bags'],p=box['probs'])\n",
+    "    marble = np.random.choice(bag['marbles'], p=bag['probs'])\n",
     "    # randomly choose a marble \n",
-    "    return none\n",
+    "    return marble\n",
     "\n",
-    "#sample_marble(box)\n",
+    "sample_marble(box)\n",
     "# 'black' OR 'white'"
    ]
   },
@@ -117,14 +157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def probability_of_color(color, box, num_samples=1000):\n",
-    "    # get a bunch of marbles \n",
+    "    # get a bunch of marbles\n",
+    "    matches = 0\n",
+    "    c = 1\n",
+    "    while c < num_samples:\n",
+    "        m = sample_marble(box)\n",
+    "        if m == color:\n",
+    "            matches += 1\n",
+    "        c +=1\n",
+    "        \n",
     "    # compute fraction of marbles of desired color \n",
-    "    return none"
+    "    return round(matches/num_samples,4)"
    ]
   },
   {
@@ -136,14 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5487"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# probability_of_color(\"black\", box, num_samples=100000)\n",
-    "\n",
-    "\n",
-    "# very close to 0.55"
+    "probability_of_color(\"black\", box, 100000)"
    ]
   },
   {
@@ -242,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
