--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "       dtype=object), 'probs': array([0.5, 0.5])}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
     "#                           {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}],dtype=object), \n",
     "#                         'probs': np.array([0.5, 0.5])}\n",
     "\n",
-    "box  = {'bags': np.array([bag1, bag],dtype=object), \n",
+    "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
     "                        'probs': np.array([0.5, 0.5])}\n",
     "\n",
     "# bag1, bag2, \n",
