automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your Solution here "
+    "# Your Solution here \n",
+    "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.4, 0.6])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}\n",
+    "# box  = {'bags': np.array([{'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.4, 0.6])},\n",
+    "#                           {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}],dtype=object), \n",
+    "#                         'probs': np.array([0.5, 0.5])}\n",
+    "\n",
+    "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
+    "                        'probs': np.array([0.5, 0.5])}"
    ]
   },
   {
