--- a/index.ipynb
+++ b/index.ipynb
@@ -237,8 +237,8 @@
    "outputs": [],
    "source": [
     "# Your Solution here \n",
-    "bag1 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.4, 0.6])}\n",
-    "bag2 = {'marbles': np.array(['black', 'white'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}\n",
+    "bag1 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([0.4, 0.6])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([0.7, 0.3])}\n",
     "\n",
     "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
     "                        'probs': np.array([0.5, 0.5])}"
