--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "source": [
     "# Your Solution here \n",
     "bag1 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([4/15, 6/15,5/15])}\n",
-    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([, 0.3])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([7/15, 0.3])}\n",
     "\n",
     "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
     "                        'probs': np.array([0.5, 0.5])}"
