--- a/index.ipynb
+++ b/index.ipynb
@@ -241,7 +241,7 @@
     "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([7/15, 3/15, 5/15])}\n",
     "\n",
     "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
-    "                        'probs': np.array([0.5, 0.5])}"
+    "                        'probs': np.array([2/3, 1/3])}"
    ]
   },
   {
