automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# probability_of_color(\"gray\", box, num_samples=100000)\n",
+    "probability_of_color(\"gray\", box, num_samples=100000)\n",
     "\n",
     "\n",
     "\n",
