--- a/index.ipynb
+++ b/index.ipynb
@@ -238,8 +238,9 @@
    "source": [
     "# Your Solution here \n",
     "bag1 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), \n",
-    "        'probs': np.array([4/15, 6/15,5/15])}\n",
-    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), 'probs': np.array([7/15, 3/15, 5/15])}\n",
+    "            'probs': np.array([4/15, 6/15,5/15])}\n",
+    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), \n",
+    "            'probs': np.array([7/15, 3/15, 5/15])}\n",
     "\n",
     "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
     "                        'probs': np.array([2/3, 1/3])}"
