automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your Solution here \n",
-    "bag1 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), \n",
+    "bag1 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'), \n",
     "            'probs': np.array([4/15, 6/15,5/15])}\n",
-    "bag2 = {'marbles': np.array(['black', 'white', 'grey'], dtype='<U5'), \n",
+    "bag2 = {'marbles': np.array(['black', 'white', 'gray'], dtype='<U5'), \n",
     "            'probs': np.array([7/15, 3/15, 5/15])}\n",
     "\n",
     "box  = {'bags': np.array([bag1, bag2],dtype=object), \n",
