--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change above code here "
+    "# Change above code here \n",
+    "def probability_of_color(color, box, num_samples=1000):\n",
+    "    # get a bunch of marbles \n",
+    "    marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
+    "    # compute fraction of marbles of desired color \n",
+    "    return np.sum(marbles == color) / num_samples"
    ]
   },
   {
