automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,34 +255,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change above code here \n",
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
-    "    marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
+    "    marbles = np.array([sample_marble(box) for i in range(num_samples)])\n",
     "    # compute fraction of marbles of desired color \n",
     "    return np.sum(marbles == color) / num_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3352"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "probability_of_color(\"gray\", box, num_samples=100000)\n",
     "\n",
