--- a/index.ipynb
+++ b/index.ipynb
@@ -255,23 +255,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change above code here \n",
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
-    "    marbles = np.array([sample_marble(box) for i in range(num_samples)])\n",
+    "    marbles = np.array([sample_marble(box) for x in range(num_samples)])\n",
     "    # compute fraction of marbles of desired color \n",
     "    return np.sum(marbles == color) / num_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33342"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "probability_of_color(\"gray\", box, num_samples=100000)\n",
     "\n",
