automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -255,36 +255,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change above code here \n",
     "def probability_of_color(color, box, num_samples=1000):\n",
     "    # get a bunch of marbles \n",
-    "    marbles = np.array([sample_marble(box) for x in range(num_samples)])\n",
+    "    marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
     "    # compute fraction of marbles of desired color \n",
     "    return np.sum(marbles == color) / num_samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.33342"
+       "0.352"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "probability_of_color(\"gray\", box, num_samples=100000)\n",
+    "probability_of_color(\"gray\", box, num_samples=1000)\n",
     "\n",
     "\n",
     "\n",
