--- a/index.ipynb
+++ b/index.ipynb
@@ -260,11 +260,11 @@
    "outputs": [],
    "source": [
     "# Change above code here \n",
-    "def probability_of_color(color, box, num_samples=1000):\n",
-    "    # get a bunch of marbles \n",
-    "    marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
-    "    # compute fraction of marbles of desired color \n",
-    "    return np.sum(marbles == color) / num_samples"
+    "# def probability_of_color(color, box, num_samples=1000):\n",
+    "#     # get a bunch of marbles \n",
+    "#     marbles = np.array([sample_marble(box) for ii in range(num_samples)])\n",
+    "#     # compute fraction of marbles of desired color \n",
+    "#     return np.sum(marbles == color) / num_samples"
    ]
   },
   {
